fix settings ini args and make it locally editable